--- a/templates/order_confirmation.html
+++ b/templates/order_confirmation.html
@@ -90,8 +90,11 @@
         <p>We are pleased to confirm your order number <strong>{order-number}</strong>, processed on <strong>{date}</strong></p>
         <p>The order will be delivered at the following location:</p>
         <p><strong>{address}</strong></p>
+        <p><strong>{customer-area}</strong></p>
+        <p><strong>{customer-city}</strong></p>
+        <p>Mobile: <strong>{customer-mobile}</strong></p>
         <br>
-        <p>Below the details of your purchase:</p>
+        <p>Below are the details of your purchase:</p>
         <div class="table-responsive">
             <table class="table table-borderless table-condensed">
                 <thead>
